# secure_chain_kg

./: .gitignore  README.md  architecture.md  docker-compose.yml  high_level_diagram.drawio  system_requirements.md
backend/: .dockerignore  Dockerfile  api.py  config.py  main.py  pyproject.toml  requirements.txt
backend/app/: sbom_generator.py  sparql_client.py
backend/converters/: cyclonedx_converter.py  json_converter.py  spdx_converter.py
backend/models/: __init__.py  model.py
backend/services/: __init__.py  sbom_generator.py  sparql_client.py
backend/templates/: index.html
backend/tests/: conftest.py  run_test.md  test_sbom_generator.py  test_sparql_client.py
backend/utils/: cache.py
data/samples/: sample-secure-chain.ttl
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: DependencyGraph.css  DependencyGraph.jsx  IndentedTreeView.css  IndentedTreeView.jsx  SBOMGenerator.css  SBOMGenerator.jsx
frontend/src/utils/: sbomParser.js
fuseki/: Dockerfile  README.md  config.ttl  load_data.sh  shiro.ini
